Fix for mobile white space at bottom

--- a/flyingfishmenuweb.client/src/index.css
+++ b/flyingfishmenuweb.client/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+    min-height: 100vh;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
